[tool.poetry]
name = "featuremonkey"
version = "0.3.1"
description = "FOP for Python"
authors = ["Hendrik Speidel <hendrik@schnapptack.de>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.4"
six = "^1.16.0"
importlib = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
