[tool.poetry]
name = "featuremonkey3"
version = "0.1.1"
description = "Python 3.11 compatible fork of featuremonkey, a Python FOP framework first developed by Hendrik Speidel."
authors = ["Adrian Wong <adrianwong227@gmail.com>"]
license = "MIT License"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.16.0"
importlib = "^1.0.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
